--- a/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
+++ b/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
@@ -909,10 +909,10 @@
                                 <svg class="w-5 h-5 teal-text flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                                 </svg>
-                                조선업: HD현대 스마트 조선소
+                                조선업: HD현대 스마트 조선소 (FOS 2030)
                             </h4>
                             <p class="themeable-text leading-relaxed">
-                                HD현대중공업은 울산 조선소에 AI 기반 용접 로봇과 자율운항 시스템을 도입하며, 실시간 센서 데이터, 용접 품질 데이터, 공정 영상 데이터를 통합 관리하는 피지컬 AI 데이터 파이프라인을 구축 중입니다. 디지털 트윈 기술을 활용한 선박 건조 시뮬레이션과 품질 예측 시스템을 통해 생산성 30% 향상을 목표로 하고 있습니다.<sup><a href="#references" class="themeable-text-muted no-underline">[4]</a></sup>
+                                HD현대중공업은 'FOS(Future of Shipyard) 2030' 프로젝트를 통해 가상 공간에 실제 조선소와 동일한 '디지털 트윈'을 구축하고, 2030년까지 생산성 30% 향상을 목표로 하고 있습니다.<sup><a href="#references" class="themeable-text-muted no-underline">[4]</a></sup>
                             </p>
                         </div>
 
@@ -921,10 +921,10 @@
                                 <svg class="w-5 h-5 teal-text flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                                 </svg>
-                                자동차: 현대자동차그룹 스마트팩토리
+                                자동차: 현대자동차그룹 스마트팩토리 (HMGICS)
                             </h4>
                             <p class="themeable-text leading-relaxed">
-                                현대자동차는 '메타팩토리' 전략을 통해 전 공정의 디지털화와 AI 자동화를 추진하고 있습니다. 생산 라인의 로봇 협업 시스템, 품질 검사 AI, 물류 최적화 시스템에 필요한 고품질 피지컬 AI 데이터를 수집·가공하는 통합 데이터 플랫폼을 운영 중이며, 합성 데이터를 활용한 AI 모델 사전 학습으로 공정 전환 시간을 단축하고 있습니다.<sup><a href="#references" class="themeable-text-muted no-underline">[5]</a></sup>
+                                현대자동차그룹은 싱가포르 글로벌 혁신센터(HMGICS)를 테스트베드로 삼아 디지털 트윈과 AI 로봇 기술이 접목된 '메타팩토리' 전략을 구체화하고 있습니다.<sup><a href="#references" class="themeable-text-muted no-underline">[5]</a></sup>
                             </p>
                         </div>
 
@@ -933,10 +933,10 @@
                                 <svg class="w-5 h-5 teal-text flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                                 </svg>
-                                정부 지원: AI 학습용 데이터 구축 사업
+                                정부 지원: AI 학습용 데이터 구축 사업 (과학기술정보통신부)
                             </h4>
                             <p class="themeable-text leading-relaxed">
-                                과학기술정보통신부는 'AI 학습용 데이터 구축 사업'을 통해 제조, 로봇, 국방 등 피지컬 AI 분야의 고품질 학습 데이터 확보를 지원하고 있습니다. 2024년까지 제조 AI 데이터 1,000종 이상을 구축하고, ISO 5259 등 국제 표준에 부합하는 데이터 품질 관리 체계를 확립하여 중소·중견 제조기업의 AI 도입 장벽을 낮추고 있습니다.<sup><a href="#references" class="themeable-text-muted no-underline">[6]</a></sup>
+                                과학기술정보통신부는 인공지능 학습용 데이터 구축 사업을 통해 제조 데이터를 포함한 다양한 산업 분야의 데이터를 확보하고 있으며, 최근 한국 주도로 개발한 AI 데이터 품질 표준이 ISO 국제표준으로 승인받았습니다.<sup><a href="#references" class="themeable-text-muted no-underline">[6]</a></sup>
                             </p>
                         </div>
 
@@ -945,10 +945,10 @@
                                 <svg class="w-5 h-5 teal-text flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                                 </svg>
-                                중소기업: 스마트팩토리 보급·확산 사업
+                                중소기업: 스마트공장 보급·확산 사업 (중소벤처기업부)
                             </h4>
                             <p class="themeable-text leading-relaxed">
-                                중소벤처기업부는 중소 제조기업을 대상으로 스마트팩토리 구축을 지원하며, 센서 데이터 수집, 실시간 모니터링, AI 기반 예지 보전 시스템 도입을 촉진하고 있습니다. 2024년 기준 3만 개 이상의 중소기업이 스마트팩토리를 구축했으며, 피지컬 AI 데이터 파이프라인 구축을 통해 불량률 감소, 에너지 효율 향상 등 가시적 성과를 달성하고 있습니다.<sup><a href="#references" class="themeable-text-muted no-underline">[7]</a></sup>
+                                중소벤처기업부는 '스마트공장 보급·확산 사업'을 통해 2022년 말 기준 3만 개 목표를 달성했으며, 단순 구축을 넘어 AI 기반 예지보전 등 고도화를 지원하고 있습니다.<sup><a href="#references" class="themeable-text-muted no-underline">[7]</a></sup>
                             </p>
                         </div>
                     </div>
@@ -1400,12 +1400,12 @@
 
                     <!-- 한국 기업 사례 -->
                     <li class="leading-relaxed">
-                        HD현대. (2024). "스마트 조선소 및 디지털 전환."
-                        <a href="https://www.hd.co.kr"
+                        뉴스토마토. (2024). "HD현대중공업, 스마트 조선소 FOS 구축으로 생산성 30% 향상." 2030년까지 '지능형 자율운영 조선소' 구현, 디지털 트윈 기반 가상 조선소 '트윈포스' 활용, AI 및 로봇 도입을 통한 공정 기간 단축 및 생산성 목표 달성 계획.
+                        <a href="https://www.newstomato.com/ReadNews.aspx?no=1281337"
                            target="_blank"
                            rel="noopener noreferrer"
                            class="text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 underline inline-flex items-center gap-1">
-                            HD 공식사이트
+                            뉴스토마토 기사 보기
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
                             </svg>
@@ -1413,12 +1413,12 @@
                     </li>
 
                     <li class="leading-relaxed">
-                        현대자동차그룹. (2024). "스마트 팩토리 및 제조 혁신."
-                        <a href="https://www.hyundai.com"
+                        현대자동차그룹. (2024). "HMGICS - 가상의 디지털 공간에 세운 쌍둥이 공장." 디지털 트윈 기술을 통해 가상 공간에서 공장을 운영 및 시뮬레이션하고, AI와 데이터를 활용해 물류와 생산을 최적화하는 구체적인 기술 사례.
+                        <a href="https://www.hyundaimotorgroup.com/ko/story/CONT0000000000122330"
                            target="_blank"
                            rel="noopener noreferrer"
                            class="text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 underline inline-flex items-center gap-1">
-                            현대자동차 공식사이트
+                            현대자동차그룹 공식 웹페이지
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
                             </svg>
@@ -1426,12 +1426,12 @@
                     </li>
 
                     <li class="leading-relaxed">
-                        과학기술정보통신부. (2024). "AI 학습용 데이터 구축 사업."
-                        <a href="https://aihub.or.kr"
+                        전자신문. (2024). "한국 주도 AI 데이터 품질 표준, 국제표준(ISO/IEC 5259) 최종 승인." 과기정통부와 ETRI가 주도한 AI 데이터 품질 평가 및 관리 기준이 국제 표준으로 제정되었으며, 이는 고품질 데이터 확보와 AI 신뢰성 제고를 위한 정부의 노력을 보여줍니다.
+                        <a href="https://www.etnews.com/20240718000297"
                            target="_blank"
                            rel="noopener noreferrer"
                            class="text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 underline inline-flex items-center gap-1">
-                            AI Hub
+                            전자신문 기사 보기
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
                             </svg>
@@ -1439,12 +1439,12 @@
                     </li>
 
                     <li class="leading-relaxed">
-                        중소벤처기업부. (2024). "스마트공장 보급·확산 사업."
-                        <a href="https://www.smart-factory.kr"
+                        중소벤처기업부. (2022). "2022년 스마트공장 보급·확산 지원사업 공고." 2022년까지 스마트공장 3만 개 보급 목표 추진 현황과 도입 기업의 생산성 향상, 불량률 감소 등의 성과, 그리고 AI·데이터 기반의 고도화 지원 계획.
+                        <a href="https://www.mss.go.kr/site/smba/ex/bbs/View.do?cbIdx=86&bcIdx=1031335&parentSeq=1031335"
                            target="_blank"
                            rel="noopener noreferrer"
                            class="text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 underline inline-flex items-center gap-1">
-                            스마트공장 포털
+                            중소벤처기업부 공고 보기
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
                             </svg>
