--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="/css/styles.css?v=20250109-2">
+    <script src="/scripts/daily-dal.js" defer></script>
 </head>
 <body class="antialiased">
 
