--- a/project/SyntheticData/synthetic-data-pricing-01.html
+++ b/project/SyntheticData/synthetic-data-pricing-01.html
@@ -24,8 +24,8 @@
     <meta property="og:title" content="합성 데이터 가격의 진실: '데이터'가 아니라 '가치'를 산다 | 페블러스 DataClinic">
     <meta property="og:description" content="정밀타기팅 합성데이터(Hyper Synthetic Data)로 데이터 품질을 혁신하세요. 페블러스 DataClinic이 제공하는 데이터 다이어트와 벌크업 솔루션으로 AI-Ready Data를 완성합니다.">
     <meta property="og:image" content="https://blog.pebblous.ai/project/SyntheticData/image/synthetic-data-pricing-01.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <meta property="og:image:width" content="2400">
+    <meta property="og:image:height" content="1260">
     <meta property="og:image:alt" content="2025년 글로벌 합성데이터 가격 전략 분석 - 페블러스 DataClinic">
     <meta property="og:site_name" content="Pebblous Blog">
     <meta property="og:locale" content="ko_KR">
@@ -80,7 +80,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 
     <!-- Common Styles -->
-    <link rel="stylesheet" href="/styles/common-styles.css">
+    <link rel="stylesheet" href="/styles/common-styles.css?v=20251119">
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -321,79 +321,60 @@
 
         <!-- Executive Summary -->
         <section id="summary" class="mb-16 fade-in-card">
-            <div class="themeable-card rounded-xl p-8 md:p-10 interactive-card">
-                <h2 class="text-3xl font-bold themeable-heading mb-6 flex items-center gap-3">
-                    <div class="icon-wrapper">
-                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                        </svg>
+            <h2 class="text-3xl font-bold themeable-heading mb-8 flex items-center gap-3">
+                <div class="icon-wrapper">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                    </svg>
+                </div>
+                초록 (Executive Summary)
+            </h2>
+
+            <!-- 핵심 메시지 -->
+            <div class="themeable-card rounded-xl p-8 md:p-10 mb-8" style="border-left: 4px solid #F86825;">
+                <p class="text-2xl font-bold themeable-heading mb-4">
+                    "데이터 포인트"의 환상과 "가치 서비스"의 현실
+                </p>
+                <p class="themeable-text leading-relaxed text-lg">
+                    글로벌 합성데이터 시장의 가격 책정은 '데이터 포인트당 비용'($ per data point)이라는 초기의 단순한 지표에서 벗어나, 고도로 정교화된 <strong class="accent-text">'3중 요금제(Three-Part Tariff)'</strong> 구조로 빠르게 수렴하고 있습니다. 본 보고서는 이 3중 요금제 모델이 현존하는 엔터프라이즈급 합성데이터 벤더의 수익 모델을 설명하는 보편적 프레임워크임을 입증합니다.
+                </p>
+            </div>
+
+            <!-- 핵심 발견 3가지 -->
+            <div class="grid md:grid-cols-3 gap-6">
+                <div class="themeable-card rounded-xl p-6 interactive-card" style="border-top: 4px solid #F86825;">
+                    <div class="text-center mb-4">
+                        <div class="inline-flex items-center justify-center w-12 h-12 rounded-full mb-3" style="background-color: rgba(248, 104, 37, 0.1);">
+                            <span class="text-2xl font-bold accent-text">1</span>
+                        </div>
+                        <h3 class="text-lg font-bold themeable-heading">3중 요금제 모델</h3>
                     </div>
-                    초록 (Executive Summary)
-                </h2>
-
-                <div class="space-y-6 themeable-text leading-relaxed">
-                    <p class="text-xl font-semibold accent-text">
-                        "데이터 포인트"의 환상과 "가치 서비스"의 현실
+                    <p class="text-sm themeable-text-muted leading-relaxed text-center">
+                        플랫폼 최소 약정 + 가변 미터 + 가치 부가 서비스의 3층 구조가 업계 표준으로 확립
                     </p>
+                </div>
 
-                    <p>
-                        글로벌 합성데이터 시장의 가격 책정은 '데이터 포인트당 비용'($ per data point)이라는 초기의 단순한 지표에서 벗어나, 고도로 정교화된 <strong class="accent-text">'3중 요금제(Three-Part Tariff)'</strong> 구조로 빠르게 수렴하고 있습니다. 본 보고서는 이 3중 요금제 모델이 현존하는 엔터프라이즈급 합성데이터 벤더의 수익 모델을 설명하는 보편적 프레임워크임을 입증합니다.
-                    </p>
-
-                    <div class="bg-opacity-10 rounded-lg p-6 border-l-4 border-l-orange-500" style="background-color: rgba(248, 104, 37, 0.1);">
-                        <p class="font-semibold themeable-heading mb-4">3중 요금제의 핵심 구성 요소:</p>
-                        <div class="space-y-4">
-                            <div class="flex items-start gap-3">
-                                <div class="number-badge">1</div>
-                                <div>
-                                    <strong class="themeable-heading">플랫폼 최소 약정(The Platform Floor):</strong>
-                                    <p class="text-sm themeable-text-muted mt-1">플랫폼 접근, 보안, 기본 지원을 위한 협상 불가능한 월간(MRC) 또는 연간(ARC) 고정 비용입니다.</p>
-                                </div>
-                            </div>
-                            <div class="flex items-start gap-3">
-                                <div class="number-badge">2</div>
-                                <div>
-                                    <strong class="themeable-heading">가변 미터(The Variable Meter):</strong>
-                                    <p class="text-sm themeable-text-muted mt-1">실제 사용량을 측정하는 종량제 비용입니다. 측정 기준(컴퓨팅 시간, 데이터 포인트 수, 토큰)은 벤더의 전략과 데이터 모달리티에 따라 급격하게 달라집니다.</p>
-                                </div>
-                            </div>
-                            <div class="flex items-start gap-3">
-                                <div class="number-badge">3</div>
-                                <div>
-                                    <strong class="themeable-heading">가치 부가 서비스(The Value-Add):</strong>
-                                    <p class="text-sm themeable-text-muted mt-1">플랫폼의 기본 기능을 초월하여 특정 비즈니스 문제 해결, 도메인 제약 적용, 품질 보증, 프라이버시 보증 등을 제공하는 전문 서비스 비용입니다.</p>
-                                </div>
-                            </div>
+                <div class="themeable-card rounded-xl p-6 interactive-card" style="border-top: 4px solid #14b8a6;">
+                    <div class="text-center mb-4">
+                        <div class="inline-flex items-center justify-center w-12 h-12 rounded-full mb-3" style="background-color: rgba(20, 184, 166, 0.1);">
+                            <span class="text-2xl font-bold teal-text">2</span>
                         </div>
+                        <h3 class="text-lg font-bold themeable-heading">모달리티가 가격을 결정</h3>
                     </div>
-
-                    <p>
-                        본 보고서의 핵심 분석 결과는, <strong class="accent-text">데이터 모달리티(정형, 텍스트, 비전)</strong>가 이 3중 요금제의 <strong class="accent-text">구성 비율</strong>을 근본적으로 결정한다는 것입니다.
+                    <p class="text-sm themeable-text-muted leading-relaxed text-center">
+                        정형/텍스트/이미지 데이터의 특성에 따라 3중 요금제의 구성 비율이 근본적으로 달라짐
                     </p>
+                </div>
 
-                    <div class="grid md:grid-cols-3 gap-4 mt-6">
-                        <div class="themeable-card rounded-lg p-4">
-                            <h4 class="font-bold themeable-heading mb-2">정형/시계열</h4>
-                            <p class="text-sm themeable-text-muted">가변 미터: $100~$200</p>
-                            <p class="text-sm font-bold accent-text">전문 서비스: $10,000~$40,000</p>
-                            <p class="text-xs themeable-text-muted mt-2">비용의 99%가 도메인 제약 적용 서비스</p>
+                <div class="themeable-card rounded-xl p-6 interactive-card" style="border-top: 4px solid #a855f7;">
+                    <div class="text-center mb-4">
+                        <div class="inline-flex items-center justify-center w-12 h-12 rounded-full mb-3" style="background-color: rgba(168, 85, 247, 0.1);">
+                            <span class="text-2xl font-bold" style="color: #a855f7;">3</span>
                         </div>
-                        <div class="themeable-card rounded-lg p-4">
-                            <h4 class="font-bold themeable-heading mb-2">텍스트/NLP</h4>
-                            <p class="text-sm themeable-text-muted">가변 미터가 비용의 상당 부분 차지</p>
-                            <p class="text-sm font-bold accent-text">교사 LLM의 API 추론 비용에 연동</p>
-                            <p class="text-xs themeable-text-muted mt-2">토큰 기반 과금 모델</p>
-                        </div>
-                        <div class="themeable-card rounded-lg p-4">
-                            <h4 class="font-bold themeable-heading mb-2">이미지/CV</h4>
-                            <p class="text-sm themeable-text-muted">플랫폼 최소 약정: 월 $3,000~$15,000</p>
-                            <p class="text-sm font-bold accent-text">3D 시뮬레이션 인프라 구독료</p>
-                            <p class="text-xs themeable-text-muted mt-2">기술 지원(TAM) 비용 선반영</p>
-                        </div>
+                        <h3 class="text-lg font-bold themeable-heading">솔루션 중심 판매</h3>
                     </div>
-
-                    <p class="text-lg font-semibold">
-                        결론적으로, 고객은 '데이터' 자체를 구매하는 것이 아니라, 특정 문제를 해결하는 <strong class="accent-text">'솔루션'</strong> 또는 <strong class="accent-text">'인프라 접근권'</strong>을 구매합니다.
+                    <p class="text-sm themeable-text-muted leading-relaxed text-center">
+                        엔터프라이즈 고객은 '데이터'가 아닌 '문제 해결 솔루션'과 '인프라 접근권'을 구매
                     </p>
                 </div>
             </div>
@@ -405,10 +386,7 @@
 
             <div class="themeable-text mb-8 leading-relaxed">
                 <p>
-                    합성데이터의 가격을 분석할 때 가장 흔히 접하는 오류는, YData의 SDK 정책($1 / 100만 데이터 포인트)과 같이 단순한 '데이터 포인트당' 비용을 시장의 표준으로 오해하는 것입니다. 특정 BMS 시계열 증강 프로젝트(1.7억 포인트 생성)에 이 모델을 적용하면, 순수 생성 비용은 약 $172.80에 불과합니다.
-                </p>
-                <p class="mt-4">
-                    그러나 실제 글로벌 벤더에 PoC(Proof of Concept)를 의뢰할 때의 견적은 <strong class="accent-text">$10,000에서 $40,000</strong>에 이릅니다.
+                    합성데이터의 가격을 분석할 때 가장 흔히 접하는 오류는, 단순한 '데이터 포인트당' 비용을 시장의 표준으로 오해하는 것입니다. 실제 엔터프라이즈급 프로젝트의 견적은 플랫폼 사용료를 훨씬 넘어서는 수준이며, 이는 세 가지 요소가 결합된 <strong class="accent-text">3중 요금제 구조</strong>로 설명됩니다.
                 </p>
             </div>
 
@@ -518,21 +496,15 @@
                     '가치 부가 서비스'는 플랫폼의 기본 기능을 넘어선 특정 도메인 문제 해결, 품질 보증, 시나리오 설계, 프라이버시 보증 등을 위한 전문 컨설팅 및 관리형 서비스입니다. 엔터프라이즈 시장에서 이는 '옵션'이 아닌 사실상의 <strong class="accent-text">'필수 핵심 비용'</strong>입니다.
                 </p>
 
-                <div class="space-y-4">
+                <div class="grid md:grid-cols-2 gap-4">
                     <div class="bg-opacity-10 rounded-lg p-4" style="background-color: rgba(248, 104, 37, 0.05);">
-                        <p class="font-semibold themeable-heading mb-2">BMS PoC 사례</p>
-                        <p class="text-sm themeable-text-muted">"Pro" 패키지($18,000): 물리·안전 제약 룰세트 적용 + 희귀 이벤트(과열/스파이크) 비율 컨트롤</p>
+                        <p class="font-semibold themeable-heading mb-2">정형/시계열 데이터</p>
+                        <p class="text-sm themeable-text-muted">도메인 제약 적용, 희귀 이벤트 제어, 물리 법칙 반영 등 ($10k~$40k)</p>
                     </div>
                     <div class="bg-opacity-10 rounded-lg p-4" style="background-color: rgba(248, 104, 37, 0.05);">
-                        <p class="font-semibold themeable-heading mb-2">이미지/CV 사례</p>
-                        <p class="text-sm themeable-text-muted">Synthesis AI: 커스텀 데이터셋 최소 $10,000 | Rendered.ai: Organizations 플랜에 TAM(기술 지원 매니저) 포함</p>
+                        <p class="font-semibold themeable-heading mb-2">이미지/CV 데이터</p>
+                        <p class="text-sm themeable-text-muted">커스텀 시나리오, 3D 자산 제작, TAM 지원 (최소 $10k~)</p>
                     </div>
-                </div>
-
-                <div class="mt-6 bg-opacity-10 rounded-lg p-6 border-l-4 border-l-orange-500" style="background-color: rgba(248, 104, 37, 0.1);">
-                    <p class="themeable-text leading-relaxed text-center text-lg">
-                        엔터프라이즈 고객은 "데이터 1TB"를 구매하는 것이 아니라, <strong class="accent-text">"특정 비즈니스 문제를 해결하는 솔루션"</strong>을 구매합니다.
-                    </p>
                 </div>
             </div>
         </section>
@@ -885,6 +857,16 @@
 
             <div class="themeable-card rounded-xl p-8 mb-8">
                 <h3 class="text-2xl font-bold themeable-heading mb-6">B. 핵심 결론: 모달리티가 가격 구조를 결정한다</h3>
+
+                <div class="p-6 rounded-lg mb-6" style="background-color: rgba(20, 184, 166, 0.1); border-left: 4px solid #14b8a6;">
+                    <p class="text-lg font-semibold themeable-heading mb-2">
+                        고객은 '데이터'가 아닌 '솔루션'을 구매합니다
+                    </p>
+                    <p class="themeable-text leading-relaxed">
+                        엔터프라이즈 고객이 실제로 구매하는 것은 단순히 '데이터 1TB' 또는 '100만 레코드'가 아닙니다. 정형 데이터에서는 <strong class="accent-text">도메인 전문성</strong>, 텍스트 데이터에서는 <strong class="accent-text">SOTA LLM 접근권</strong>, 이미지 데이터에서는 <strong class="accent-text">3D 시뮬레이션 인프라</strong>입니다. 이것이 '데이터 포인트당 과금'이 시장의 실제 가격을 설명할 수 없는 이유입니다.
+                    </p>
+                </div>
+
                 <div class="grid md:grid-cols-3 gap-6">
                     <div class="bg-opacity-10 rounded-lg p-6" style="background-color: rgba(248, 104, 37, 0.1);">
                         <h4 class="font-bold themeable-heading mb-3">정형/시계열 (BMS)</h4>
@@ -1170,39 +1152,6 @@
         </svg>
     </button>
 
-    <!-- Footer Component Placeholder -->
-    <div id="footer-placeholder"></div>
-
-    <!-- PDF Viewer Modal -->
-    <div id="pdf-modal" class="fixed inset-0 z-50 hidden">
-        <!-- Backdrop -->
-        <div class="absolute inset-0 bg-black bg-opacity-75 transition-opacity" id="pdf-modal-backdrop"></div>
-
-        <!-- Modal Content -->
-        <div class="relative w-full h-full flex items-center justify-center p-4">
-            <div class="relative w-full h-full max-w-7xl max-h-[95vh] themeable-card rounded-xl overflow-hidden shadow-2xl">
-                <!-- Header -->
-                <div class="flex items-center justify-between p-4 border-b themeable-border">
-                    <h3 class="text-xl font-bold themeable-heading">PDF 리포트 미리보기</h3>
-                    <button id="close-pdf-modal" class="p-2 hover:bg-opacity-10 rounded-lg transition-colors accent-text">
-                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-                        </svg>
-                    </button>
-                </div>
-
-                <!-- PDF Iframe -->
-                <iframe
-                    id="pdf-iframe"
-                    class="w-full h-[calc(100%-60px)]"
-                    src=""
-                    frameborder="0"
-                    allowfullscreen>
-                </iframe>
-            </div>
-        </div>
-    </div>
-
     <!-- FAQ Section -->
     <section id="faq" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16 mb-16">
         <div class="text-center mb-12">
@@ -1252,6 +1201,39 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer Component Placeholder -->
+    <div id="footer-placeholder"></div>
+
+    <!-- PDF Viewer Modal -->
+    <div id="pdf-modal" class="fixed inset-0 z-50 hidden">
+        <!-- Backdrop -->
+        <div class="absolute inset-0 bg-black bg-opacity-75 transition-opacity" id="pdf-modal-backdrop"></div>
+
+        <!-- Modal Content -->
+        <div class="relative w-full h-full flex items-center justify-center p-4">
+            <div class="relative w-full h-full max-w-7xl max-h-[95vh] themeable-card rounded-xl overflow-hidden shadow-2xl">
+                <!-- Header -->
+                <div class="flex items-center justify-between p-4 border-b themeable-border">
+                    <h3 class="text-xl font-bold themeable-heading">PDF 리포트 미리보기</h3>
+                    <button id="close-pdf-modal" class="p-2 hover:bg-opacity-10 rounded-lg transition-colors accent-text">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                        </svg>
+                    </button>
+                </div>
+
+                <!-- PDF Iframe -->
+                <iframe
+                    id="pdf-iframe"
+                    class="w-full h-[calc(100%-60px)]"
+                    src=""
+                    frameborder="0"
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </div>
 
     <!-- Common Utils Script -->
     <script src="/scripts/common-utils.js?v=20250110-4"></script>
